ontol-compiler/test-cases/error/union/ambiguous_pattern_prefix.on
def foo (
    fmt '' => 'foo' => uuid => .
)
def bar (
    fmt '' => 'bar' => uuid => .
)
def barbar (
    fmt '' => 'barbar' => uuid => .
)
def union ( // ERROR variants of the union have prefixes that are prefixes of other variants
    rel .is?: foo
    rel .is?: bar
    rel .is?: barbar
)
